<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ProfileFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.07"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
            <LinearLayout
                android:id="@+id/info_profil"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical"
                android:background="@drawable/background_orange"
                tools:ignore="MissingConstraints">
                <ImageView
                    android:id="@+id/foto_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/foto_profil"
                    android:layout_gravity="center"
                    android:layout_marginTop="64dp"/>
                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="USERNAME"
                    android:textAllCaps="true"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/orange_light"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/edit_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black_light"
                android:textSize="14sp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/info_profil"
                app:layout_constraintStart_toEndOf="@id/vertical_start"/>
            <ImageButton
                android:id="@+id/btn_edit_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/ikon_edit_profile"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/info_profil"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="4dp"/>
            <TextView
                android:id="@+id/txt_nomor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_nomor"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/edit_data"
                app:layout_constraintStart_toEndOf="@id/vertical_start"/>
            <TextView
                android:id="@+id/nomor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nomor"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"
                android:textColor="@color/black_light"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/txt_nomor"
                app:layout_constraintStart_toEndOf="@id/vertical_start"/>
            <ImageView
                android:id="@+id/line_nomor"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:src="@drawable/line_gray"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@id/vertical_start"
                app:layout_constraintEnd_toEndOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/nomor"/>
            <TextView
                android:id="@+id/txt_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/line_nomor"
                app:layout_constraintStart_toEndOf="@id/vertical_start"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"
                android:textColor="@color/black_light"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/txt_email"
                app:layout_constraintStart_toEndOf="@id/vertical_start"/>
            <ImageView
                android:id="@+id/line_email"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:src="@drawable/line_gray"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@id/vertical_start"
                app:layout_constraintEnd_toEndOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/email"/>
            <TextView
                android:id="@+id/txt_perangkat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_perangkat"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/line_email"
                app:layout_constraintStart_toEndOf="@id/vertical_start"/>
            <TextView
                android:id="@+id/perangkat_terhubung"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/perangkat"
                android:fontFamily="@font/poppins_bold"
                android:textStyle="bold"
                android:textColor="@color/black_light"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/txt_perangkat"
                app:layout_constraintStart_toEndOf="@id/vertical_start"/>
            <ImageView
                android:id="@+id/line_perangkat"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:src="@drawable/line_gray"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@id/vertical_start"
                app:layout_constraintEnd_toEndOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/perangkat_terhubung"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/line_perangkat"
                android:background="@drawable/rectangle_orange"
                app:layout_constraintStart_toEndOf="@id/vertical_start"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>