<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MutasiFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.07"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
            <TextView
                android:id="@+id/txt_mutasi"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/background_orange_new"
                android:text="@string/mutasi"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/orange_light"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                tools:ignore="MissingConstraints" />
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_rekening"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintEnd_toEndOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/txt_mutasi">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txt_rekening"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_sumber_rekening"
                        android:fontFamily="@font/poppins_bold"/>
                    <TextView
                        android:id="@+id/no_rekening"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rekening"
                        android:textColor="@color/orange"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="150dp"
                    android:src="@drawable/drop_down" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/tgl_satu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_satu"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintTop_toBottomOf="@id/cardview_rekening"
                android:layout_marginTop="25dp"/>
            <ImageView
                android:id="@+id/line_atas_satu"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:src="@drawable/line_gray"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@id/vertical_start"
                app:layout_constraintEnd_toEndOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/tgl_satu"/>
            <TextView
                android:id="@+id/biaya_admin_satu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                app:layout_constraintTop_toBottomOf="@id/line_atas_satu"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/txt_admin_satu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_admin"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintTop_toBottomOf="@id/line_atas_satu"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/biaya_admin_bulanan_satu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_admin"
                app:layout_constraintTop_toBottomOf="@id/biaya_admin_satu"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/txt_admin_bulanan_satu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_month_admin"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintTop_toBottomOf="@id/txt_admin_satu"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/tgl_dua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_dua"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintTop_toBottomOf="@id/txt_admin_bulanan_satu"
                android:layout_marginTop="12dp"/>
            <ImageView
                android:id="@+id/line_atas_dua"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:src="@drawable/line_gray"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@id/vertical_start"
                app:layout_constraintEnd_toEndOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/tgl_dua"/>
            <TextView
                android:id="@+id/biaya_admin_dua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                app:layout_constraintTop_toBottomOf="@id/line_atas_dua"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/txt_admin_dua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_admin"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintTop_toBottomOf="@id/line_atas_dua"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/biaya_admin_bulanan_dua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_admin"
                app:layout_constraintTop_toBottomOf="@id/biaya_admin_dua"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/txt_admin_bulanan_dua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_month_admin"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintTop_toBottomOf="@id/txt_admin_dua"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/tgl_tiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_tiga"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintTop_toBottomOf="@id/txt_admin_bulanan_dua"
                android:layout_marginTop="12dp"/>
            <ImageView
                android:id="@+id/line_atas_tiga"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:src="@drawable/line_gray"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@id/vertical_start"
                app:layout_constraintEnd_toEndOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/tgl_tiga"/>
            <TextView
                android:id="@+id/biaya_admin_tiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                app:layout_constraintTop_toBottomOf="@id/line_atas_tiga"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/txt_admin_tiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_admin"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintTop_toBottomOf="@id/line_atas_tiga"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/biaya_admin_bulanan_tiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_admin"
                app:layout_constraintTop_toBottomOf="@id/biaya_admin_tiga"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/txt_admin_bulanan_tiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_month_admin"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintTop_toBottomOf="@id/txt_admin_tiga"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>