<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InboxFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.07"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
            <TextView
                android:id="@+id/txt_inbox"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/background_orange_new"
                android:text="@string/inbox"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/orange_light"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tgl_inbox_satu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_satu"
                app:layout_constraintTop_toBottomOf="@id/txt_inbox"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/judul_inbox_satu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_pesan_satu"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintTop_toBottomOf="@id/txt_inbox"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/inbox_satu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pesan_satu"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/judul_inbox_satu"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"/>
            <ImageView
                android:id="@+id/line_bawah_satu"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:src="@drawable/line_gray"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toEndOf="@id/vertical_start"
                app:layout_constraintEnd_toEndOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/inbox_satu"/>
            <TextView
                android:id="@+id/tgl_inbox_dua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_satu"
                app:layout_constraintTop_toBottomOf="@id/line_bawah_satu"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/judul_inbox_dua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_pesan_satu"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintTop_toBottomOf="@id/line_bawah_satu"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/inbox_dua"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pesan_satu"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/judul_inbox_dua"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"/>
            <ImageView
                android:id="@+id/line_bawah_dua"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:src="@drawable/line_gray"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toEndOf="@id/vertical_start"
                app:layout_constraintEnd_toEndOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/inbox_dua"/>
            <TextView
                android:id="@+id/tgl_inbox_tiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_satu"
                app:layout_constraintTop_toBottomOf="@id/line_bawah_dua"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/judul_inbox_tiga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_pesan_satu"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintTop_toBottomOf="@id/line_bawah_dua"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/inbox_tiga"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pesan_satu"
                app:layout_constraintStart_toStartOf="@id/vertical_start"
                app:layout_constraintEnd_toStartOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/judul_inbox_tiga"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"/>
            <ImageView
                android:id="@+id/line_bawah_tiga"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:src="@drawable/line_gray"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toEndOf="@id/vertical_start"
                app:layout_constraintEnd_toEndOf="@id/vertical_end"
                app:layout_constraintTop_toBottomOf="@id/inbox_tiga"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>